--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,15 +21,36 @@ services:
     ports:
       - "6541:5432"
     volumes:
-      - /EWM_stats-postgresql-db
+      - /EWM-stats-db
     environment:
       - POSTGRES_DB=stats
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
 
-  #ewm-service:
-  #  ports:
-  #    - "8080:8080"
+  ewm-service:
+    build: ./server
+    image: emw-server-image
+    container_name: emw-server-image
+    depends_on:
+      - stats-server
+      - ewm-db
+    ports:
+      - "8080:8080"
+    environment:
+      - DB_NAME=ewm-server
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - DB_HOST=ewm-db
+      - DB_PORT=5432
 
-  #ewm-db:
-  #  image: postgres:14-alpine
+  ewm-db:
+      image: postgres:14
+      container_name: EWM-server-db
+      ports:
+        - "6542:5432"
+      environment:
+        - POSTGRES_DB=ewm-server
+        - POSTGRES_USER=root
+        - POSTGRES_PASSWORD=root
+      volumes:
+        - /EWM-server-db
