--- a/statistic/src/main/resources/application.properties
+++ b/statistic/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 #---
 spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/EWM-Statistic
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:stat
+spring.datasource.username=test
+spring.datasource.password=test
