--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<modules>
 		<!--<module>statistic</module>-->
 		<module>server</module>
-		<module>stat</module>
+		<module>stats</module>
 	</modules>
 
 	<build>
