--- a/stats/pom.xml
+++ b/stats/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>stat</artifactId>
+    <artifactId>stats</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>stat-dto</module>
-        <module>stat-server</module>
-        <module>stat-client</module>
+        <module>stats-dto</module>
+        <module>stats-server</module>
+        <module>stats-client</module>
     </modules>
 
     <properties>
