--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - POSTGRES_PASSWORD=root
       - DB_HOST=ewm-db
       - DB_PORT=5432
+      - STAT_SERVER_URL=http://stats-server:9090
 
   ewm-db:
       image: postgres:15.1-alpine
