feat: реализованы предложения по общей функциональности

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   stats-server:
+    restart: on-failure
     build: ./stats/stats-server
     image: stats-server-image
     container_name: ewm-stats-server
@@ -28,6 +29,7 @@ services:
       - POSTGRES_PASSWORD=root
 
   ewm-service:
+    restart: on-failure
     build: ./server
     image: emw-server-image
     container_name: emw-main-server
